--- a/about.html
+++ b/about.html
@@ -70,8 +70,65 @@
   <!--((((((((((((((((((( content )))))))))))))))))))-->
   <!--(((((((((((((((((((((((()))))))))))))))))))))))-->
   <content>
-   
-    
+    <section class="about">
+      <div class="col">
+        <!-- Swiper -->
+        <div class="swiper topSlider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img data-atropos-offset="4" src="img/bg1.webp">
+            </div>
+            <div class="swiper-slide">
+              <img data-atropos-offset="4" src="img/bg2.webp">
+            </div>
+            <div class="swiper-slide">
+              <img data-atropos-offset="4" src="img/bg3.webp">
+            </div>
+            <div class="swiper-slide">
+              <img data-atropos-offset="4" src="img/bg4.webp">
+            </div>
+            <div class="swiper-slide">
+              <img data-atropos-offset="4" src="img/bg5.webp">
+            </div>
+          </div>
+        </div>
+        <div class="experience">
+          <span> 25 </span>
+          عاماً من الخبرة
+        </div>
+      </div>
+      <div class="col">
+        <!-- title -->
+        <div class="title">
+          <div class="side">
+            <p data-aos="fade-up"> خبراتنا تمتد لسنوات طويلة نستعرض لك بعض من تاريخنا الملهم . </p>
+          </div>
+          <span class="distance"></span>
+          <div class="side">
+            <h6 data-aos="fade-up"> من نحن </h6>
+            <h1 data-aos="fade-up"> تعرف علينا عن كثب </h1>
+          </div>
+        </div>
+        <p class="moreInfo">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam nam unde qui mollitia inventore, doloremque
+          deserunt, molestiae magnam ea sunt quaerat at, ex quo sint soluta exercitationem reiciendis veniam fugit?
+        </p>
+        <ul>
+          <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum tenetur odit tempora excepturi
+            perspiciatis voluptatum nihil perferendis nulla voluptatem in, ipsum temporibus assumenda aspernatur quaerat
+            magnam qui id consectetur sint.
+           </li>
+          <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum tenetur odit tempora excepturi
+            perspiciatis voluptatum nihil perferendis nulla voluptatem in, ipsum temporibus assumenda aspernatur quaerat
+            magnam qui id consectetur sint.
+           </li>
+          <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum tenetur odit tempora excepturi
+            perspiciatis voluptatum nihil perferendis nulla voluptatem in, ipsum temporibus assumenda aspernatur quaerat
+            magnam qui id consectetur sint.
+           </li>
+        </ul>
+      </div>
+    </section>
   </content>
   <!--(((((((((((((((((((((((()))))))))))))))))))))))-->
   <!--((((((((((((((((( / content )))))))))))))))))))-->
