--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
     </section>
     <!--  services -->
-    <section class="services" id="services">
+    <section class="services">
       <!-- title -->
       <div class="title">
         <div class="side">
