--- a/about.html
+++ b/about.html
@@ -110,22 +110,46 @@
           </div>
         </div>
         <p class="moreInfo">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam nam unde qui mollitia inventore, doloremque
-          deserunt, molestiae magnam ea sunt quaerat at, ex quo sint soluta exercitationem reiciendis veniam fugit?
+          شركة وكب للسيارات ، مختصين بعلامة نيسان التجاريه ونقوم بتوزيع منتجاتها ونعمل على خدمات الصيانة والاعطال وقطغ
+          الغيار باعلى معاير الجودة والخدمة ونتميز عن غيرنا بــ
+
         </p>
         <ul>
-          <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum tenetur odit tempora excepturi
-            perspiciatis voluptatum nihil perferendis nulla voluptatem in, ipsum temporibus assumenda aspernatur quaerat
-            magnam qui id consectetur sint.
-           </li>
-          <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum tenetur odit tempora excepturi
-            perspiciatis voluptatum nihil perferendis nulla voluptatem in, ipsum temporibus assumenda aspernatur quaerat
-            magnam qui id consectetur sint.
-           </li>
-          <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum tenetur odit tempora excepturi
-            perspiciatis voluptatum nihil perferendis nulla voluptatem in, ipsum temporibus assumenda aspernatur quaerat
-            magnam qui id consectetur sint.
-           </li>
+          <li>
+            <div class="special">
+              <span> الجودة </span>
+              جودتنا هي سر نجاحنا المستمر .
+            </div>
+          </li>
+
+          <li>
+            <div class="special">
+              <span> السرعة </span>
+              السرعة في العمل هي اكثر ما يهم عملاؤنا فلذلك تعتبر من اولوياتنا مع جودة الصيانة .
+            </div>
+          </li>
+
+          <li>
+            <div class="special">
+              <span> المهارة </span>
+              لدينا افضل الفنيين والمهندسين في مجالتهم في المنطقة العربية .
+            </div>
+          </li>
+
+          <li>
+            <div class="special">
+              <span> الدقة </span>
+             خبرة المهندسين تتضح في دقتنا في اكتشاف الاعطال وصيانتها . 
+            </div>
+          </li>
+
+          <li>
+            <div class="special">
+              <span> الدعم </span>
+              لدينا افضل دعم لعملاؤنا الكرام وايضا برامج للصيانة الدورية .
+            </div>
+          </li>
+
         </ul>
       </div>
     </section>
