--- a/about.html
+++ b/about.html
@@ -109,42 +109,42 @@
             <h1 data-aos="fade-up"> تعرف علينا عن كثب </h1>
           </div>
         </div>
-        <p class="moreInfo">
+        <p class="moreInfo" data-aos="fade-up" data-aos-delay="100">
           شركة وكب للسيارات ، مختصين بعلامة نيسان التجاريه ونقوم بتوزيع منتجاتها ونعمل على خدمات الصيانة والاعطال وقطغ
           الغيار باعلى معاير الجودة والخدمة ونتميز عن غيرنا بــ
 
         </p>
         <ul>
           <li>
-            <div class="special">
+            <div class="special" data-aos="fade-up" data-aos-delay="200">
               <span> الجودة </span>
               جودتنا هي سر نجاحنا المستمر .
             </div>
           </li>
 
           <li>
-            <div class="special">
+            <div class="special" data-aos="fade-up" data-aos-delay="300">
               <span> السرعة </span>
               السرعة في العمل هي اكثر ما يهم عملاؤنا فلذلك تعتبر من اولوياتنا مع جودة الصيانة .
             </div>
           </li>
 
           <li>
-            <div class="special">
+            <div class="special" data-aos="fade-up" data-aos-delay="400">
               <span> المهارة </span>
               لدينا افضل الفنيين والمهندسين في مجالتهم في المنطقة العربية .
             </div>
           </li>
 
           <li>
-            <div class="special">
+            <div class="special" data-aos="fade-up" data-aos-delay="500">
               <span> الدقة </span>
              خبرة المهندسين تتضح في دقتنا في اكتشاف الاعطال وصيانتها . 
             </div>
           </li>
 
           <li>
-            <div class="special">
+            <div class="special" data-aos="fade-up" data-aos-delay="600">
               <span> الدعم </span>
               لدينا افضل دعم لعملاؤنا الكرام وايضا برامج للصيانة الدورية .
             </div>
