--- a/contact.html
+++ b/contact.html
@@ -70,6 +70,41 @@
   <!--((((((((((((((((((( content )))))))))))))))))))-->
   <!--(((((((((((((((((((((((()))))))))))))))))))))))-->
   <content>
+
+
+    <div class="worldMap">
+      <div class="earth"></div>
+      <div class="orbic">
+        <svg viewBox="0 0 500 500" width="0" height="0">
+          <g id="orbic_path">
+            <ellipse cx="250" cy="250" rx="240" ry="100" transform="rotate(-10,250,250)"></ellipse>
+            <path d="M230,192Q300,25 375,146"></path>
+            <path d="M375,146Q450,175 410,301"></path>
+            <path d="M40,234Q300,125 410,301"></path>
+            <path d="M410,301Q260,165 125,354"></path>
+            <path d="M125,354Q150,220 230,192"></path>
+            <path d="M40,234Q130,200 125,354"></path>
+          </g>
+          <g id="orbic_dots">
+            <defs>
+              <circle id="orbic_dot" cx="0" cy="0" r="6"></circle>
+            </defs>
+            <use id="orbic_dot1" xlink:href="#orbic_dot"></use>
+            <use id="orbic_dot2" xlink:href="#orbic_dot"></use>
+            <use id="orbic_dot3" xlink:href="#orbic_dot"></use>
+            <use id="orbic_dot4" xlink:href="#orbic_dot"></use>
+            <use id="orbic_dot5" xlink:href="#orbic_dot"></use>
+          </g>
+          <g id="orbic_users">
+            <image id="orbic_user1" xlink:href="img/user1.webp" width="20%" height="20%"></image>
+            <image id="orbic_user2" xlink:href="img/user2.webp" width="20%" height="20%"></image>
+            <image id="orbic_user3" xlink:href="img/user3.webp" width="20%" height="20%"></image>
+            <image id="orbic_user4" xlink:href="img/user4.webp" width="20%" height="20%"></image>
+            <image id="orbic_user5" xlink:href="img/user5.webp" width="20%" height="20%"></image>
+          </g>
+        </svg>
+      </div>
+    </div>
    
     
   </content>
