--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="" />
   <!-- title -->
-  <title> WKD </title>
+  <title> WKB </title>
   <!-- favicon -->
   <link rel="icon" type="image/x-icon" href="img/logo.svg" />
   <!-- aos -->
@@ -41,7 +41,7 @@
         <div class="loader-circle-2"></div>
       </div>
       <div class="needle"></div>
-      <div class="loading">WKD</div>
+      <div class="loading">WKB</div>
     </div>
   </div>
   <!-- ================ Header ================= -->
