--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
   <link rel="icon" type="image/x-icon" href="img/logo.svg" />
   <!-- aos -->
   <link rel="stylesheet" href="css/aos.css" />
+  <!-- fontAwesome -->
+  <link rel="stylesheet" href="css/fontAwesome.css">
   <!-- atropos -->
   <link rel="stylesheet" href="css/atropos.css">
   <!-- odometer -->
@@ -55,6 +57,8 @@
       <div class="navMenu">
         <a class="navLink" href="index.html"> الرئيسية </a>
         <a class="navLink" href="about.html"> من نحن </a>
+        <a class="navLink" href="cars-shop.html"> متجر السيارات </a>
+        <a class="navLink" href="car-parts-shop.html"> متجر قطع السيارات </a>
         <a class="navLink btn" href="contact.html"> تواصل معنا </a>
       </div>
       <!-- toggle btn -->
