--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel="icon" type="image/x-icon" href="img/logo.svg" />
   <!-- aos -->
   <link rel="stylesheet" href="css/aos.css" />
+  <!-- fontAwesome -->
+  <link rel="stylesheet" href="css/fontAwesome.css">
   <!-- atropos -->
   <link rel="stylesheet" href="css/atropos.css">
   <!-- odometer -->
@@ -21,12 +23,13 @@
   <link rel="stylesheet" href="css/swiper-bundle.min.css" />
   <!-- Custom style  -->
   <link rel="stylesheet" href="css/style.css" />
+
 </head>
 
 <body>
   <div class="spinner">
     <div class="loader">
-          <div class="line"></div>
+      <div class="line"></div>
       <div class="line"></div>
       <div class="line"></div>
       <div class="line"></div>
@@ -55,6 +58,8 @@
       <div class="navMenu">
         <a class="navLink" href="index.html"> الرئيسية </a>
         <a class="navLink" href="about.html"> من نحن </a>
+        <a class="navLink" href="cars-shop.html"> متجر السيارات </a>
+        <a class="navLink" href="car-parts-shop.html"> متجر قطع السيارات </a>
         <a class="navLink btn" href="contact.html"> تواصل معنا </a>
       </div>
       <!-- toggle btn -->
@@ -192,6 +197,140 @@
             <div class="data">
               <h5> التركيبات الداخلية </h5>
               <p> ببساطة نص شكلي (بمعنى أن الغاية هي الشكل وليس المحتوى) ويُستخدم في صناعات المطابع </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- store section -->
+    <section class="store_section">
+      <!-- section_head -->
+      <div class="section_head">
+        <h3>السيارات الأكثر مبيعاً</h3>
+        <a href="shop.html" class="shop_all"> عرض الكل
+          <i class="fa-regular fa-circle-arrow-left"></i>
+        </a>
+      </div>
+      <div class="swiper carsSwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="car_card">
+              <div class="img">
+                <img src="img/vehicle-24.jpg" alt="vehicle-24">
+                <div class="pro_pice">
+                  <span>$95,500</span>
+                </div>
+                <div class="over_lay">
+                  <span><i class="fa-sharp fa-light fa-images"></i> 3</span>
+                </div>
+              </div>
+              <div class="car_info">
+                <div class="name">
+                  <h4>Audi A4 sedan</h4>
+                </div>
+                <ul class="details">
+                  <li>Petrol - Gas</li>
+                  <li>2017</li>
+                  <li>Automatic</li>
+                  <li>4000cc</li>
+                  <li>380mph</li>
+                </ul>
+                <div class="link">
+                  <a href="car-details.html"><span>عرض التفاصيل</span>
+                    <div><i class="fa-solid fa-arrow-up-left"></i></div>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="car_card">
+              <div class="img">
+                <img src="img/vehicle-23.jpg" alt="vehicle-24">
+                <div class="pro_pice">
+                  <span>$200,000</span>
+                </div>
+                <div class="over_lay">
+                  <span><i class="fa-sharp fa-light fa-images"></i> 3</span>
+                </div>
+              </div>
+              <div class="car_info">
+                <div class="name">
+                  <h4>BMW X6</h4>
+                </div>
+                <ul class="details">
+                  <li>Petrol - Gas</li>
+                  <li>2017</li>
+                  <li>Automatic</li>
+                  <li>4000cc</li>
+                  <li>380mph</li>
+                </ul>
+                <div class="link">
+                  <a href="car-details.html"><span>عرض التفاصيل</span>
+                    <div><i class="fa-solid fa-arrow-up-left"></i></div>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="car_card">
+              <div class="img">
+                <img src="img/vehicle-21.jpg" alt="vehicle-24">
+                <div class="pro_pice">
+                  <span>$95,500</span>
+                </div>
+                <div class="over_lay">
+                  <span><i class="fa-sharp fa-light fa-images"></i> 3</span>
+                </div>
+              </div>
+              <div class="car_info">
+                <div class="name">
+                  <h4>Range Rover</h4>
+                </div>
+                <ul class="details">
+                  <li>Petrol - Gas</li>
+                  <li>2017</li>
+                  <li>Automatic</li>
+                  <li>4000cc</li>
+                  <li>380mph</li>
+                </ul>
+                <div class="link">
+                  <a href="car-details.html"><span>عرض التفاصيل</span>
+                    <div><i class="fa-solid fa-arrow-up-left"></i></div>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="car_card">
+              <div class="img">
+                <img src="img/vehicle-20.jpg" alt="vehicle-24">
+                <div class="pro_pice">
+                  <span>$95,500</span>
+                </div>
+                <div class="over_lay">
+                  <span><i class="fa-sharp fa-light fa-images"></i> 3</span>
+                </div>
+              </div>
+              <div class="car_info">
+                <div class="name">
+                  <h4>Lexuis</h4>
+                </div>
+                <ul class="details">
+                  <li>Petrol - Gas</li>
+                  <li>2017</li>
+                  <li>Automatic</li>
+                  <li>4000cc</li>
+                  <li>380mph</li>
+                </ul>
+                <div class="link">
+                  <a href="car-details.html"><span>عرض التفاصيل</span>
+                    <div><i class="fa-solid fa-arrow-up-left"></i></div>
+                  </a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
